# agent-bench

./: .env.example  .gitignore  README.md  pyproject.toml
experiments/codeloc-bench/: README.md  pyproject.toml
experiments/codeloc-bench/src/codeloc_bench/: cli.py  patches.py  repos.py  runner.py
experiments/file-localization/: CONTRACT.md  README.md  pyproject.toml
experiments/file-localization/scripts/: build_verified_difficulty.py  build_verified_enrichment.py  export_failure_fixtures.py  localization_agent_leg.py  make_debugger_examples.py  run_config_arms.py  run_context_ablation.py  run_three_legs.py  show_traces.py  smoke_turn_loop.py  swebench_difficulty.py  verifier_localization.py
experiments/file-localization/scripts/_smoke_out/: smoke_floc-smoke-1__claude-haiku-4-5.json
experiments/file-localization/src/file_localization/: agent_cli_trial.py  cli.py  contract.py  data.py  difficulty.py  llm_trial.py  local.py  metrics.py  phase.py  prompts.py  repo_view.py  repos.py  swebench_adapter.py  tools.py  turn_loop_structured_trial.py  turn_loop_trial.py
experiments/file-localization/src/file_localization/adapters/: __init__.py  hf_swebench.py  local.py
experiments/file-localization/src/file_localization/retrievers/: base.py  bm25.py  embedding.py  ripgrep.py  semble.py
experiments/file-localization/tests/: test_agent_cli_trial.py  test_contract.py  test_difficulty_loader.py  test_embedding_retriever.py  test_enrichment.py  test_headroom.py  test_session_emit.py  test_turn_loop_structured_trial.py  test_turn_loop_trial.py
experiments/tool-selection/: .env.example  CONTRACT.md  README.md  SUMMARY.md  THESIS.md  pyproject.toml
experiments/tool-selection/data/lessons_phase3/lessons-only/: lessons.jsonl
experiments/tool-selection/data/lessons_phase3/lessons-plus-promotion/: lessons.jsonl
experiments/tool-selection/data/runs/: huge_smoke.jsonl  huge_smoke.rescored.jsonl  lessons_bash.jsonl  lessons_experiment.jsonl  lessons_pytest.jsonl  lessons_pytest_thin.jsonl  new_tasks_check.jsonl  phase3.jsonl  phase35.jsonl  phase3_v2.jsonl  phase3_v3.jsonl  phase3_v4.jsonl  phase_smoke.jsonl  plan_check.jsonl  preview.jsonl  shakedown.jsonl  sweep_bloat.jsonl  sweep_haiku.jsonl  sweep_haiku.rescored.jsonl  sweep_rich.jsonl  sweep_rich.rescored.jsonl  sweep_rich_wide.jsonl  sweep_v2_haiku.jsonl  sweep_v2_sonnet.jsonl  twophase_fat.jsonl  twophase_mixed.jsonl  twophase_smoke.jsonl
experiments/tool-selection/notebooks/: 01_report.py
experiments/tool-selection/scripts/: figures.py  figures_phase3.py  multiturn_smoke.py  report.py  rescore.py  run_lessons_experiment.py  run_phase35_experiment.py  run_phase3_experiment.py  run_phase3_v4.py  run_sweep.py  shakedown.py  test_scorer.py  thesis.py
experiments/tool-selection/src/tool_selection/: __init__.py  contract.py  matchers.py  operations.py  pricing.py  runner.py  scorer.py  strategies.py  trial.py  types.py
experiments/tool-selection/src/tool_selection/adapters/: __init__.py  local_hand_authored.py
experiments/tool-selection/tests/: test_model_client_migration.py  test_trial_wrapper.py
lib/agent-eval-core/: DIMENSIONS.md  FAILURE_MODES.md  HARNESS.md  NEXT.md  PLATFORM.md  README.md  SOTA.md  STRATEGY.md  TRACE.md  pyproject.toml
lib/agent-eval-core/data/: SOURCES.md  failure_fixtures.yaml  swebench_verified_difficulty.csv  swebench_verified_enrichment.csv
lib/agent-eval-core/examples/: minimal_sweep.py
lib/agent-eval-core/src/agent_eval/: __init__.py  difficulty.py  failure_modes.py  native_trace.py  openinference.py  pricing.py  reports.py  trace.py  tracing.py  transcripts.py  types.py
lib/agent-eval-core/tests/: test_context_policies.py  test_difficulty.py  test_native_trace.py  test_openinference.py  test_replicates.py  test_smoke.py  test_taxonomy.py  test_trace.py
(+166 files in other folders)
